--- a/index.html
+++ b/index.html
@@ -1,21 +1,238 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8">
+<title>Ryan Carter - UCL Computer Science</title>
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/lighter.css" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
-	<form action="upload.php" method="post"
-		enctype="application/x-www-form-urlencoded">
-		<label for="sourcecode">Source code:</label>
-		<textarea id="sourcecode" name="code"></textarea>
-		<input type="submit" value="Submit" name="source">
-	</form>
+	<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+		<div class="container">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse"
+					data-target=".navbar-ex1-collapse">
+					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span>
+				</button>
+				<a class="navbar-brand nav-link" href="#top">Ryan Carter -
+					Automatic Marking</a>
+			</div>
+			<!-- /.navbar-header -->
 
-	<form action="upload.php" method="post" enctype="multipart/form-data">
-		Select image to upload: <input type="file" name="fileToUpload"
-			id="fileToUpload"> <input type="submit" value="Upload File"
-			name="submit">
-	</form>
+			<div class="collapse navbar-collapse navbar-ex1-collapse">
+				<ul class="nav navbar-nav navbar-right">
+					<li><a href="#features" class="nav-link">Features</a></li>
+					<li><a href="#faqs" class="nav-link">FAQs</a></li>
+					<li><a href="#about" class="nav-link">About</a></li>
+					<li><a href="#contact">Contact Us</a></li>
+				</ul>
+			</div>
+			<!-- /.navbar-collapse -->
+		</div>
+		<!-- /.container -->
+	</nav>
+	<!-- /.navbar -->
 
+	<div id="top" class="jumbotron">
+		<div class="container">
+			<h1>Source code checker/marker</h1>
+			<h2>Helping YOU achieve YOUR goals since 1995</h2>
+			<p>
+				<a href="" class="btn btn-primary btn-lg">Download <span
+					class="glyphicon glyphicon-circle-arrow-down"></span></a>
+			</p>
+		</div>
+		<!-- /.container -->
+	</div>
+	<!-- /.jumbotron -->
+
+
+	<div class="container">
+		<div class="pasteBox">
+			<form action="upload.php" method="post">
+				<label for="sourcecode">Source code:</label>
+				<textarea class="pasteBox" id="sourcecode" name="code"></textarea>
+				<input type="submit" value="Submit">
+			</form>
+		</div>
+		<div class="uploadCode">
+			<form action="upload.php" method="post" enctype="multipart/form-data">
+				<label class="uploadCode" for="fileToUpload">OR select file
+					to upload: </label> <input class="uploadCode" type="file"
+					name="fileToUpload" id="fileToUpload"> <input
+					class="uploadCode" type="submit" value="Upload File" name="submit">
+			</form>
+		</div>
+	</div>
+	<div class="container">
+		<h3 id="introduction" class="subhead">Introduction</h3>
+		<p style="font-size: 20px; text-align: center">As a group of eight
+			we have been given the task to design an hovercraft.</p>
+		<h3 id="features" class="subhead">Features</h3>
+		<div class="row benefits">
+			<div class="col-md-4 col-sm-6 benefit">
+				<div class="benefit-ball">
+					<span class="glyphicon glyphicon-gbp"></span>
+				</div>
+				<h3>Cheap</h3>
+				<p>
+				<ul>
+
+					<li>Built cheaply at a low-cost budget of approximately 30
+						pounds!</li>
+					<li>Built out of readily available materials.</li>
+				</ul>
+
+				</p>
+			</div>
+			<!-- /.benefit -->
+
+			<div class="col-md-4 col-sm-6 benefit">
+				<div class="benefit-ball">
+					<span class="glyphicon glyphicon-paperclip"></span>
+				</div>
+				<h3>A Great Teaching Tool</h3>
+				<p>
+				<ul>
+
+					<li>Simple enough to be operated by schoolchildren.</li>
+					<li>The code used to program the hovercraft is simple enough
+						for schoolchildren.</li>
+				</ul>
+				</p>
+			</div>
+			<!-- /.benefit -->
+
+			<div class="col-md-4 col-sm-6 benefit">
+				<div class="benefit-ball">
+					<span class="glyphicon glyphicon-ok"></span>
+				</div>
+				<h3>Safe &amp; Fun</h3>
+				<p>
+				<ul>
+
+					<li>The hovercraft can run indoors.</li>
+					<li>The hovercraft should operate for approximately ten
+						minutes.</li>
+					<li>The hovercraft is able to run autonomously!</li>
+				</ul>
+				</p>
+			</div>
+			<!-- /.benefit -->
+		</div>
+		<!-- /.row -->
+	</div>
+	<!-- /.container -->
+
+	<div class="container-alternate">
+		<div class="container"></div>
+		<!-- /.col-md-12 -->
+	</div>
+	<!-- /.row -->
+
+	<!-- /.container -->
+
+	<!-- /.container-alternate -->
+
+	<div class="container">
+		<h3 id="faqs" class="subhead">Frequently Asked Questions</h3>
+		<div class="row faqs">
+			<p class="col-md-4 col-sm-6">
+				<strong>Who is it for?</strong> <br> We want to create an
+				autonomous (having the freedom to control itself) hovercraft which
+				can be programmed by schoolchildren. The idea is to create a very
+				hands-on and practical learning environment for schoolchildren, it
+				should making programming fun!
+			</p>
+			<p class="col-md-4 col-sm-6">
+				<strong>Why did you create it?</strong> <br> The majority of
+				schools have a very limited budget in which they can purchase
+				additional learning equipment. Ideally a school would purchase
+				around ten hovercrafts allowing multiple groups to work with them
+				simultaneously. <br>
+			</p>
+			<p class="col-md-4 col-sm-6">
+				<strong>How can get my hands on one?</strong> <br> Lorem ipsum
+				dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh
+				euismod tincidunt ut laoreet dolore magna. Ut wisi enim ad minim
+				veniam, quis nostrud exerci tation ullamcorper suscipit lobortis
+				nisl ut aliquip ex ea commodo consequat.
+			</p>
+			<p class="col-md-4 col-sm-6">
+				<strong>How can I get involved and support the community?</strong> <br>
+				Simply click on the "<a href="#top">sign up</a>" link at the <a
+					href="#top">top of the page</a> and sign up to our community forum
+				to discuss improvements, solutions and keep up to date with the
+				latest developments. <br> We welcome your contributions!
+			</p>
+			<!--<p class="col-md-4 col-sm-6">
+					<strong>Lorem ipsum dolor sit amet?</strong>
+					<br>
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+					nonummy nibh euismod tincidunt ut laoreet dolore magna.  Ut wisi enim
+					ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+					lobortis nisl ut aliquip ex ea commodo consequat.
+				</p>
+				<p class="col-md-4 col-sm-6">
+					<strong>Lorem ipsum dolor sit amet?</strong>
+					<br>
+					Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam
+					nonummy nibh euismod tincidunt ut laoreet dolore magna.  Ut wisi enim
+					ad minim veniam, quis nostrud exerci tation ullamcorper suscipit
+					lobortis nisl ut aliquip ex ea commodo consequat.
+				</p>-->
+		</div>
+		<!-- /.faqs -->
+	</div>
+	<!-- /.container -->
+
+	<div class="container-alternate">
+		<div class="container">
+			<h3 id="about" class="subhead">About Us</h3>
+			<div class="row about">
+				<div class="col-md-10 col-md-offset-1 text-center">
+
+					Ryan Carter (<a href="http://carterrj.wordpress.com/">http://carterrj.wordpress.com</a>).
+					<p></p>
+
+					<em>Supervisor:</em>Dr. Graham Roberts.
+					</p>
+				</div>
+				<!-- /.col-md-10 -->
+			</div>
+			<!-- /.row -->
+		</div>
+		<!-- /.container -->
+	</div>
+	<!-- /.container-alternate -->
+
+	<footer>
+		<div class="container clearfix">
+			<p class="pull-left">Copyright &copy; 2015</p>
+			<p class="pull-right">
+				<a href="http://www.engineering.ucl.ac.uk/">@Carter_RJ</a>
+			</p>
+		</div>
+		<!-- /.container -->
+	</footer>
+
+	<script src="js/jquery.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script>
+		$(".nav-link").click(
+				function(e) {
+					e.preventDefault();
+					var link = $(this);
+					var href = link.attr("href");
+					$("html,body").animate({
+						scrollTop : $(href).offset().top - 80
+					}, 500);
+					link.closest(".navbar").find(
+							".navbar-toggle:not(.collapsed)").click();
+				});
+	</script>
 </body>
 </html>
