--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand nav-link" href="#top">Ryan Carter -
-					Automatic Marking</a>
+				<a class="navbar-brand nav-link" href="#top">Ryan Carter - Source Code Checker</a>
 			</div>
 			<!-- /.navbar-header -->
 
@@ -28,6 +27,7 @@
 					<li><a href="#faqs" class="nav-link">FAQs</a></li>
 					<li><a href="#about" class="nav-link">About</a></li>
 					<li><a href="#contact">Contact Us</a></li>
+					<li><a href="login"><strong>Log in</strong></a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -198,7 +198,7 @@
 					Ryan Carter (<a href="http://carterrj.wordpress.com/">http://carterrj.wordpress.com</a>).
 					<p></p>
 
-					<em>Supervisor:</em>Dr. Graham Roberts.
+					<em>Supervisor: </em>Dr. Graham Roberts.
 					</p>
 				</div>
 				<!-- /.col-md-10 -->
