Show list of submissions in Member Area

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 					<span class="icon-bar"></span> <span class="icon-bar"></span> <span
 						class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand nav-link" href="#top">Ryan Carter - Source Code Checker</a>
+				<a class="navbar-brand nav-link" href="#top">Ryan Carter -
+					Source Code Checker</a>
 			</div>
 			<!-- /.navbar-header -->
 
@@ -195,10 +196,12 @@
 			<div class="row about">
 				<div class="col-md-10 col-md-offset-1 text-center">
 
-					Ryan Carter (<a href="http://carterrj.wordpress.com/">http://carterrj.wordpress.com</a>).
-					<p></p>
+					<p>
+						Ryan Carter (<a href="http://carterrj.wordpress.com/">http://carterrj.wordpress.com</a>)
+					</p>
 
-					<em>Supervisor: </em>Dr. Graham Roberts.
+					<p>
+						<em>Supervisor: </em>Dr. Graham Roberts
 					</p>
 				</div>
 				<!-- /.col-md-10 -->
