--- a/Selenium/Download submission.html
+++ b/Selenium/Download submission.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Third%20Year%20Project/index.html</td>
+	<td>/Third%20Year%20Project/index.php</td>
 	<td></td>
 </tr>
 <tr>
@@ -61,7 +61,6 @@
 	<td>css=pre</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
