--- a/Selenium/Log in.html
+++ b/Selenium/Log in.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Third%20Year%20Project/index.html</td>
+	<td>/Third%20Year%20Project/index.php</td>
 	<td></td>
 </tr>
 <tr>
@@ -56,7 +56,6 @@
 	<td>css=body &gt; nav &gt; div &gt; div.collapse.navbar-collapse.navbar-ex1-collapse &gt; ul &gt; li:nth-child(4) &gt; a &gt; strong</td>
 	<td>Log in</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
