--- a/Selenium/Perfect upload (no log in).html
+++ b/Selenium/Perfect upload (no log in).html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Third%20Year%20Project/index.html</td>
+	<td>/Third%20Year%20Project/index.php</td>
 	<td></td>
 </tr>
 <tr>
@@ -31,7 +31,6 @@
 	<td>css=h4</td>
 	<td>No compilation errors.</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
