--- a/Selenium/Submit coursework.html
+++ b/Selenium/Submit coursework.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/Third%20Year%20Project/index.html</td>
+	<td>/Third%20Year%20Project/index.php</td>
 	<td></td>
 </tr>
 <tr>
@@ -56,7 +56,6 @@
 	<td>link=Question 3 - isPalindrome</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
